# rws_motion_client

./: CMakeLists.txt  README.md  package.xml
launch/: motion_client.launch.py  rws.launch.py
src/: rws_motion_client.cpp
